--- a/vercel.json
+++ b/vercel.json
@@ -1,15 +1,44 @@
 {
-    "version": 2,
-    "builds": [
+  "version": 2,
+  "builds": [
+    {
+      "src": "api/grok.js",
+      "use": "@vercel/node"
+    }
+  ],
+  "routes": [
+    {
+      "src": "/api/grok",
+      "dest": "api/grok.js",
+      "methods": ["GET", "POST", "OPTIONS"]
+    }
+  ],
+  "headers": [
+    {
+      "source": "/api/grok",
+      "headers": [
         {
-            "src": "api/grok.js",
-            "use": "@vercel/node"
-        }
-    ],
-    "routes": [
+          "key": "Access-Control-Allow-Origin",
+          "value": "https://beedu-six.vercel.app"
+        },
         {
-            "src": "/api/grok",
-            "dest": "api/grok.js"
+          "key": "Access-Control-Allow-Methods",
+          "value": "GET, POST, OPTIONS"
+        },
+        {
+          "key": "Access-Control-Allow-Headers",
+          "value": "Content-Type, Authorization"
+        },
+        {
+          "key": "Access-Control-Max-Age",
+          "value": "86400"
         }
-    ]
+      ]
+    }
+  ],
+  "functions": {
+    "api/grok.js": {
+      "runtime": "@vercel/node"
+    }
+  }
 }
